--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
+
 {
   "presets": [
     "es2015",
@@ -7,5 +8,14 @@
     "development": {
       "presets": []
     }
-  }
+  },
+  "plugins": [
+    [
+      "transform-class-properties",
+      {
+        "spec": true
+      }
+    ]
+  ],
+   "presets":[ "es2015", "react", "stage-0" ] 
 }
